<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Odoo</string>
    <string name="sync_label_customers">Customers</string>
    <string name="toast_information_saved">Information Saved</string>
    <string name="toast_image_size_too_large">Image size too large !</string>
    <string name="label_no_customer_found">No Customer Found !</string>
    <string name="message_to">Message to %s</string>
    <string name="add_internal_note">Add and internal note</string>
    <string name="internal_note_hint">Add an internal note that will not be sent to the followers</string>
    <string name="label_log_note">Log note</string>
    <string name="label_send_message"><u>Send a message</u></string>
    <string name="label_log_an_internal_note"><u>Log an internal note</u></string>
    <string name="label_version_build">Build</string>
    <string name="toast_permission_download_storage">Storage permission required to create downloaded file on your sdcard.</string>
    <string name="toast_permission_download_storage_help">Storage permission required to store downloaded files on sdcard of your phone. Please grant permission for use this feature</string>
    <string name="confirm_are_you_sure_want_to_delete">Are you sure want to delete</string>
    <string name="confirm_are_you_sure_want_to_save_draft">Are you sure want to delete</string>
    <string name="toast_record_deleted">Record deleted</string>
    <string name="sync_label_orders">sync orders</string>
    <string name="create_order">Create Order</string>
    <string name="label_no_orders_found">No Orders Found</string>
    <string name="title_activity_sale_order_line">SaleOrderLineActivity</string>
    <string name="label_no_products_added">No products are added</string>
    <string name="lable_delete">Delete</string>
    <string name="lable_change_quantity">Change Quantity</string>
    <string name="label_order">Orders</string>
    <string name="label_quantity_can_not_be_empty">Quantity can not be empty</string>
    <string name="error_updating_quantity">Error updating quantity</string>
    <string name="label_discard">Discard</string>
    <string name="lable_total">Total</string>
    <string name="label_no_order_lines_found">No Order lines Found</string>
    <string name="label_network_not_available">Network not available</string>
    <string name="error_occured">Error occurred</string>
     <string name="url_server">@string/server_url</string>
    <string name="testing">Test App</string>

    <string name="database_name">@string/server_database_name</string>

    <string name="lable_draft">Draft</string>
    <string name="label_no_internet">Internet not available</string>
    <string name="lable_please_try_again">Error while connecting to server...Please try again after few minutes</string>
    <string name="status_order_success">Order created successfully</string>
    <string name="lable_enter_url">Enter server url</string>
    <string name="lable_quality_order">Quality Order</string>
    <string name="label_design_order">Design/Colour Order</string>
    <string name="lable_order_no">Order No :</string>
    <string name="order_number"># SO0000</string>
    <string name="label_sample_quality">100</string>
    <string name="label_quantity">Qty :</string>
    <string name="label_sample_date">Jan 06, 2018, 09:15:30 AM</string>
    <string name="label_label_customer">Surekha Technologies PVT LTD</string>
    <string name="label_design_code">Design Code : </string>
    <string name="lable_sample_code">0000000</string>
    <string name="label_demo_product">Sample Product</string>
    <string name="error_invalid_qr_code">Please scan valid qr code</string>
    <string name="label_select_valid_product">Please select valid product</string>
    <string name="label_enter_valid_quantity">Please enter valid quantity</string>
    <string name="label_comment">Comment</string>
    <string name="label_true">true</string>
    <string name="label_false">false</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_other">Other</string>
    <string name="label_select_product">Select Product</string>
    <string name="label_change_product">Change Product</string>
    <string name="no_product_found">No Products found</string>
    <string name="swipe_to_check_new_task">Swipe to check new tasks</string>
    <string name="label_product_change_successfully"> Product Changed Successfully </string>
    <string name="label_enter_valid_design_product_code"> Please scan QR code having product and design details</string>
    <string name="label_enter_valid_product_code">Please enter valid product code</string>
    <string name="label_product_id_not_valid_format">Product Id is not in valid format</string>
    <string name="check_product_valid_for_qr_scan">Please check product is valid for the Scanned QR code</string>
    <string name="product_name_cannot_blank">Product name can not be blank</string>
    <string name="product_name_format_not_valid">Product name format is not valid</string>
    <string name="design_id_not_valid">Design id is not valid</string>
    <string name="design_code_cannot_blank">Design code can not be blank</string>
    <string name="check_order_is_valid">Please check that order is valid</string>
    <string name="product_add_successfully">Product Added successfully</string>
    <string name="product_quantity_updated_successfully">Product Quantity Updated successfully</string>
    <string name="order_not_valid">Order is not valid</string>
    <string name="scan_not_work_without_access_camera">QR code scanning can not work without allow to access camera.</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_not_found_or_not_validate">Product not found or Product is not validated</string>
    <string name="label_order_created">Order Created</string>
    <string name="label_no_orderline_found">No OrderLines found</string>
    <string name="swipe_to_check_new_orderline">Swipe to check new Orderlines</string>
    <string name="click_plus_to_create_order">Click on (+) button to create an order</string>
    <string name="are_u_sure_want_select_product"> Are you sure want to select product </string>
    <string name="sure_to_discard_order"> Are you sure want to discard the order? </string>
    <string name="error_deleting_order">Error deleting the order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="sure_to_confirm_order">Are you sure you want to confirm order? </string>
    <string name="order_places_successfully">Order Placed successfully.</string>
    <string name="no_taks_found">No Tasks found</string>
    <string name="customers_details">Customers Details</string>
    <string name="you_are_offline">You are Offline</string>
    <string name="label_orders">Orders</string>
    <string name="length_order">Length order</string>
    <string name="quality_feeler">Quality Feeler</string>
    <string name="design_color">Design/Color</string>
    <string name="upload_view_images">Upload / View Images</string>
    <string name="save_image">Save Image</string>
    <string name="no_images_selected">No images selected</string>
    <string name="sure_to_discard_image"> Are you sure want to delete this image? </string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="lable_odoo_session_expired">Odoo Session Expired..Please restart the app</string>
    <string name="images_saved">Images saved</string>
    <string name="label_invalid_qr_scan_from_technical_data_sheet">Invalid QR code. Please scan QR code from technical data sheet.</string>
    <string name="product_not_validated_or_qr_not_exist">Product is not validated in Odoo OR product does not exist.</string>
    <string name="want_to_save_changes">Do you want to save the changes?</string>
    <string name="delete_image">Delete Image</string>
    <string name="sure_to_save_image"> Are you sure want to save the images? </string>
    <string name="confirmation">Confirmation</string>
    <string name="want_digital_price">Create price offer with the order?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="digital_print_price">Choose Digital printing price</string>
    <string name="fetch_product">Fetching Product</string>
    <string name="fetch_customer">Fetching Customers</string>
    <string name="load_more_customer">Loading more Customers</string>
    <string name="load_more_product">Loading more Products</string>
    <string name="you_are_online">You are online</string>
    <string name="order_processing">Your order is processing…</string>
    <string name="please_wait">Please wait..</string>
    <string name="order_fetching">Your order will display here</string>
    <string name="header_not_valid">Header is not valid</string>
    <string name="connect_to_scan">Please connect to network to scan new products</string>
    <string name="grant_perrmission_menualy_message">"We need to access camera for scanning QR. Please permit the permission through "
                + "Settings screen.\n\nSelect Permissions -> Enable permission"</string>
    <string name="grant_perrmission_menualy">Permit Manually</string>

</resources>
